oxiplate-derive/tests/crates/unreachable-stable/tests/broken/literal/invalid-base-prefix.stderr
error: Unexpected suffix
 --> tests/broken/literal/invalid-base-prefix.rs:4:23
  |
4 | #[oxiplate_inline("{{ 0q19 }}")]
  |                       ^^^^
